--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@hookform/resolvers": "^5.2.2",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.3",
+    "@types/qrcode": "^1.5.6",
     "date-fns": "^4.1.0",
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "qrcode": "^1.5.4",
     "react": "19.2.3",
     "react-confetti": "^6.4.0",
     "react-dom": "19.2.3",
