--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^4.1.0",
     "jspdf": "^4.1.0",
     "lucide-react": "^0.563.0",
+    "motion": "^12.34.3",
     "next": "16.1.6",
     "qrcode": "^1.5.4",
     "react": "19.2.3",
@@ -24,6 +25,7 @@
     "react-hook-form": "^7.71.1",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.7.0",
+    "tailwindcss-motion": "^1.1.1",
     "xlsx": "^0.18.5",
     "zod": "^4.3.6"
   },
